src/livecodes/styles/app.scss
/* ... */
.simple-mode {
  .editor-title:not(.active),
  &.embed #toolbar .toolbar-render #result-button,
  &.embed #toolbar .toolbar-render #fullscreen-button,
  &.embed #toolbar .toolbar-render #app-menu-button-i18n,
  &.embed #toolbar .toolbar-render #light-theme-button,
  &.embed #toolbar .toolbar-render #dark-theme-button,
  #editors #editor-tools,
  #console-input,
  #result-popup-btn,
  #broadcast-status-btn {
    display: none !important;
  }

  #toolbar {
    margin-bottom: -9px;
    transform: scale(0.8);
    transform-origin: left top;
    width: 125%;

    #select-editor {
      width: 100%;

      .editor-title.active {
        background-color: unset;
        border: 0;
        color: var(--editor-title-simple-color);
        cursor: auto;
        display: flex;
      }
    }

    .toolbar-render div:first-child {
      flex-grow: 0;
    }
  }

  #editor-container {
    flex-grow: 1;
  }

  #tools-pane-bar {
    font-size: var(--s12);
  }

  .tools-pane-title.has-mark .mark {
    display: none !important;
  }
}

.focus-mode {
  #app-menu-button-project,
  #app-menu-button-settings,
  #app-menu-button-help,
  .language-menu-button,
  #login-link,
  #logout-link,
  #share-button,
  #result-button,
  #fullscreen-button,
  #light-theme-button,
  #dark-theme-button,
  #app-menu-button-i18n,
  #settings-button,
  .tools-pane-title:not(.console),
  .tool-buttons {
    visibility: hidden;
  }

  #focus-btn {
    opacity: 0.5;
    visibility: visible !important;
  }

  #focus-btn:hover {
    opacity: 1;
  }

  #editor-tools {
    bottom: 0;
    position: absolute;
  }

  @media only screen and (max-width: 768px) {
    #toolbar {
      #run-button,
      #share-button {
        margin: 0 var(--s4);
      }

      #settings-button,
      #login-link > span,
      #logout-link > span {
        display: none !important;
      }
    }
  }
}

ninja-keys {
  --ninja-text-color: var(--dropdown-color);
  --ninja-modal-background: var(--dropdown-bg-color);
  --ninja-accent-color: var(--dropdown-color);
  --ninja-selected-text-color: var(--dropdown-active);
  --ninja-selected-background: var(--dropdown-bg-active);
  --ninja-secondary-text-color: var(--btn-color);
  --ninja-secondary-background-color: var(--btn-bg-color);
  --ninja-placeholder-color: var(--color70);
  --ninja-footer-background: var(--dropdown-bg-color);
  --ninja-overflow-background: var(--overlay-bg-color);
  font-family: Inter, system-ui, sans-serif;

  &.dark {
    --ninja-placeholder-color: var(--color40);
  }

  &::part(ninja-selected) {
    border-inline-end: none;
  }

  &::part(ninja-hotkey) {
    margin-inline-end: 0.5em;
  }

  &::part(ninja-action__highlight) {
    background-color: yellow;
    font-weight: bold;
    padding: 0;
  }

  &::part(actions-list) {
    &::-webkit-scrollbar {
      height: var(--scrollbar-width-legacy, 8px);
      width: var(--scrollbar-width-legacy, 8px);
    }

    &::-webkit-scrollbar-track {
      background: var(--scrollbar-color-track);
      background: transparent;
      border-radius: 8px;
    }

    &::-webkit-scrollbar-corner {
      background: transparent;
    }

    &::-webkit-scrollbar-thumb {
      background: var(--scrollbar-color-thumb);
      border-radius: 8px;
    }

    &::-webkit-scrollbar-thumb:hover {
      background: var(--scrollbar-hover-color);
    }

    &::-webkit-scrollbar-thumb:active {
      background: var(--scrollbar-active-color);
    }

    &::-webkit-scrollbar-button {
      display: none;
    }
  }
}

/* Code Mirror */
// TODO TEST CM
.cm-wrap {
  height: 100%;
}

.cm-scroller {
  overflow: auto;
}

#console-input {
  .cm-activeLine {
    // background: var(--console-bg) !important; TODO Test this
  }

  .cm-gutter {
    display: none !important;
  }

  .cm-gutters #console-input-indicator {
    margin-left: 3px;
    margin-top: 3px;
  }
}

// CodeMirror Codeium
.cm-ghostText,
.cm-ghostText * {
  cursor: pointer;
  filter: grayscale(20%);
  opacity: 0.6;
}

.cm-ghostText:hover {
  background: #eee;
}

/* Prism JS */

.prism {
  margin: 0 !important;
  max-height: 100% !important;

  &#console-input {
    display: none !important;

    > pre {
      padding-left: 1em !important;
    }
  }

  .code-toolbar,
  pre {
    height: 100% !important;
    margin: 0 !important;
    max-height: 100% !important;

    .codeblock {
      padding-right: 2em !important;
    }
  }

  code {
    height: 100% !important;
    margin: 0 !important;
    max-height: 100% !important;
    overflow: auto;
    padding-bottom: 1em !important;
    padding-top: 2px !important;
    top: 2px !important;
  }

  &.codejar pre {
    box-sizing: border-box;
    cursor: text;
    padding-top: 0 !important;
  }

  &.codejar code {
    white-space: nowrap !important;
  }

  .token.comment {
    font-style: italic;
  }
}

/* line numbers */
pre[class*='language-'].line-numbers {
  counter-reset: linenumber;
  padding-left: 3.8em;
  position: relative;
}

pre[class*='language-'].line-numbers > code {
  position: relative;
  white-space: inherit;
}

/* codejar */
.line-numbers .line-numbers-rows {
  border-right: 1px solid #999;
  font-size: 100%;
  left: -3.8em;
  letter-spacing: -1px; /* works for line-numbers below 1000 lines */
  pointer-events: none;
  position: absolute;
  top: 0;
  user-select: none;
  width: 3em;
}

.line-numbers-rows > span {
  counter-increment: linenumber;
  display: block;
}

.line-numbers-rows > span::before {
  color: #999;
  content: counter(linenumber);
  display: block;
  padding-right: 0.8em;
  text-align: right;
}
/* ... */

